test/typechecker.d/invalid/ass2.souc.bad
n = 5

f(x: Integer): Integer = fndo
	b: Bool <- 'c'
	if b
		return x
	else
		return n
